--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title></title>
 </head>
 <body>
-	<h1>C'EST INSPIRÉ DE BERSERK FDP</h1>
+	<h1>C'EST INSPIRÉ DE BERSERK FDP.</h1>
 </body>
 </html>
